Mon Nov 08 09:46:03 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Escape wildcard patterns being passed to unzip - in the
	  unlikely event that one of these matched files in or under the
	  current directory, we might fail to extract all the files we wanted
	  to.

Mon Nov 08 05:03:41 GMT 2010  Olly Betts <olly@survex.com>

	* metaxmlparse.cc,metaxmlparse.h,omindex.cc: Extract author from
	  OpenDocument documents.

Mon Nov 08 03:18:26 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Extract author from PDF metadata.

Mon Nov 08 03:15:17 GMT 2010  Olly Betts <olly@survex.com>

	* metaxmlparse.h: Initialise field member variable.

Mon Nov 08 00:28:07 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Index text in headers and footers for .odt and .docx
	  files.

Thu Nov 04 11:55:58 GMT 2010  Olly Betts <olly@survex.com>

	* omega.cc,omega.h,query.cc: If we catch an error early on, make sure
	  that if it's appropriate, we write out a "Content-Type:" HTTP header
	  and end the headers.

Thu Nov 04 11:39:10 GMT 2010  Olly Betts <olly@survex.com>

	* utf8converttest.cc: Add back in testcases for charset names with
	  hyphens in.

Thu Nov 04 09:01:43 GMT 2010  Olly Betts <olly@survex.com>

	* utils.cc: Fix misuse of BUFSIZE which should be sizeof(buf) (issue
	  reported by compilation with CPPFLAGS=-D_GLIBCXX_DEBUG).

Thu Nov 04 09:01:08 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utf8convert.cc,utf8converttest.cc: If iconv can't handle a
	  charset, check if it's of the form (UTF|UCS)[_ ]?.* and if so,
	  convert to the official hypenated form.  Should fix failure of
	  utf8converttest on OSX, where it fails due to iconv not
	  supporting "UTF16".

Tue Nov 02 09:48:19 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h,loadfile.cc,loadfile.h,md5wrap.cc,md5wrap.h,
	  omindex.cc,scriptindex.cc: Use O_NOATIME if available and either the
	  file is owned by the current euid, or the current euid is 0 (i.e.