@@ -1,3 +1,8 @@
+Mon Nov 08 10:21:13 GMT 2010  Olly Betts <olly@survex.com>
+
+	* myhtmlparse.cc,myhtmlparse.h,omindex.cc: Extract author from HTML
+	  documents.
+
 Mon Nov 08 09:46:03 GMT 2010  Olly Betts <olly@survex.com>
 
 	* omindex.cc: Escape wildcard patterns being passed to unzip - in the
